--- a/CODE_ALONG/site_header.html
+++ b/CODE_ALONG/site_header.html
@@ -17,11 +17,32 @@
         <button id="ham-btn"    class="hamburger"></button>
 
     </header>
-    <nav></nav>
-    <main></main>
-    <footer></footer>
 
-    <script src="scripts/navigation.js"></script>
+   <nav id="nav-bar" class="navigation">
+  <ul>
+    <li ><a href="#">News & Events</a></li>
+    <li class="current"><a href="#">Dedicated Temples</a></li>
+    <li><a href="#">Announced Temples</a></li>
+  </ul>
+</nav>
+
+    <main>
+        <h1>Dedicated Temples</h1>
+    </main>
+
+    <footer>
+        <div class="social">
+            <a href=""  target="_blank"><img src="images/github.svg" alt="github"   width="16"  height="16"></a>
+            <a href=""  target="_blank"><img src="images/linkedin.svg" alt="linkedin"   width="16"  height="16"></a>
+            <a href=""  target="_blank"><img src="images/facebook.svg" alt="facebook"   width="16"  height="16"></a>
+            <a href=""  target="_blank"><img src="images/twitter-x.svg" alt="twitter-x" width="16"  height="16"></a>
+        </div>
+        <p>copyright symbol and current year</p>
+        <p>Last Modified</p>
+
+    </footer>
+
+   <script src="scripts/navigation.js"></script>
 
 </body>
 </html>
