--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Christopher T. Bahinting"> 
+    <meta name="description" content="WDD 231 - Home course page of  Christopher T. Bahinting, in this course we are going to study  Web Front End Development.">
     <title>Kananga Chamber of Commerce</title>
 
         
