add github socia

--- a/index.html
+++ b/index.html
@@ -43,37 +43,37 @@
 
 
     <div class="personal">
-        <div class="about-me">
+        <section class="about-me">
             <h2>About Me</h2>
             <p>I am Christopher T. Bahinting, residing in Lapu-lapu City, Cebu, Philippines. I am a student of Software and Web Development of BYU Idaho through BYU Pathway Worldwide. I have passion in making website and Software and I am having fun to explore and learn many things about Software program creation.</p>
-        </div>
-        <div class="student-photo">
+        </section>
+        <section class="student-photo">
 
             <h2>Student Photo</h2>
             <img src="images/my_photo.jpg" alt="my_photo">
-        </div>
+        </section>
     </div>
 
 
     <div class="courses">
-  <div class="course-list">
-    <h2>Web Certificate Course</h2>
-    <ul class="course-items">
-      <!-- Filter buttons -->
-      <li id="all"><strong>ALL</strong></li>
-      <li id="cse"><strong>CSE</strong></li>
-      <li id="wdd"><strong>WDD</strong></li>
+        <section class="course-list">
+            <h2>Web Certificate Course</h2>
+            <ul class="course-items">
+            <!-- Filter buttons -->
+            <li id="all"><strong>ALL</strong></li>
+            <li id="cse"><strong>CSE</strong></li>
+            <li id="wdd"><strong>WDD</strong></li>
 
-      <!-- Actual courses with data-credits -->
-      <li class="WDD" data-credits="1">WDD130</li>
-      <li class="CSE" data-credits="1">CSE210</li>
-      <li class="WDD" data-credits="1">WDD131</li>
-      <li class="CSE" data-credits="1">CSE110</li>
-      <li class="WDD" data-credits="1">WDD231</li>
-      <li class="CSE" data-credits="1">CSE111</li>
-    </ul>
-  </div>
-</div>
+            <!-- Actual courses with data-credits -->
+            <li class="WDD" data-credits="1">WDD130</li>
+            <li class="CSE" data-credits="1">CSE210</li>
+            <li class="WDD" data-credits="1">WDD131</li>
+            <li class="CSE" data-credits="1">CSE110</li>
+            <li class="WDD" data-credits="1">WDD231</li>
+            <li class="CSE" data-credits="1">CSE111</li>
+            </ul>
+        </section>
+    </div>
 
 <div class="credits">
   <p><strong> 
@@ -89,8 +89,9 @@
 
     <footer>
         <div class="social">
-            <a href=""  target="_blank"><img src="images/linkedin.svg" alt="linkedin"   width="16"  height="16"></a>
-            <a href=""  target="_blank"><img src="images/facebook.svg" alt="facebook"   width="16"  height="16"></a>
+             <a href="https://github.com/bahintingchristopher/wdd231"  target="_blank"><img src="images/github.svg" alt="github"   width="16"  height="16"></a>
+            <a href="www.linkedin.com/in/cbahinting"  target="_blank"><img src="images/linkedin.svg" alt="linkedin"   width="16"  height="16"></a>
+            <a href="https://www.facebook.com/profile.php?id=61579616556378"  target="_blank"><img src="images/facebook.svg" alt="facebook"   width="16"  height="16"></a>
             <a href=""  target="_blank"><img src="images/twitter-x.svg" alt="twitter-x" width="16"  height="16"></a>
         </div>
 
