add name ang logo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Christopher T. Bahinting"> 
     <meta name="description" content="WDD 231 - Home course page of  Christopher T. Bahinting, in this course we are going to study  Web Front End Development.">
-    <title>Kananga Chamber of Commerce</title>
+    <title>Week 1 Assignment - Course Home Page of Christopher T. Bahinting in WDD231</title>
 
         
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
 <body>
     <header>
          <img src="images/chamber-logo.svg" alt="Site Logo"  width="512"    height="512">
-        <span>Kananga Chamber of Commerce</span>
+        <span>Christopher T. Bahinting</span>
         <button id="ham-btn" class="hamburger" aria-label="Open menu"></button>
 
     </header>
@@ -45,7 +45,7 @@
     <div class="personal">
         <section class="about-me">
             <h2>About Me</h2>
-            <p>I am Christopher T. Bahinting, residing in Lapu-lapu City, Cebu, Philippines. I am a student of Software and Web Development of BYU Idaho through BYU Pathway Worldwide. I have passion in making website and Software and I am having fun to explore and learn many things about Software program creation.</p>
+            <p>I am Christopher T. Bahinting, residing in Lapu-lapu City, Cebu, Philippines. I am a student of Software and Web Development of BYU Idaho through BYU Pathway Worldwide. I have passion in making website and Software and I am having fun to explore and learn many things about Software program creation. Learning new programming language is my main focus now, I am a graduate of Associate in Computer Programming long time ago, that was year 2004 but unfortunately, I was not engage so much in Programming because I was landed a job in AutoCAD Operator, but now, I want to realign my career to programming and I am grateful for the program of the BYU Pathway Worldwide that I am able to take the Web and Software Development course through online.</p>
         </section>
         <section class="student-photo">
 
