--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <li class="CSE" data-credits="1">CSE210</li>
             <li class="WDD" data-credits="1">WDD131</li>
             <li class="CSE" data-credits="1">CSE110</li>
-            <li class="WDD" data-credits="1">WDD231</li>
+            <li class="WDD" data-credits="1S">WDD231</li>
             <li class="CSE" data-credits="1">CSE111</li>
             </ul>
         </section>
@@ -77,7 +77,7 @@
 
 <div class="credits">
   <p><strong> 
-    Number of total credits for courses listed below is</strong>
+    The Total number of courses listed above is</strong>
     <span id="credit-total">0</span>
   </p>
 </div>
