make 3 column of filter category

--- a/index.html
+++ b/index.html
@@ -56,21 +56,23 @@
 
 
     <div class="courses">
-        <section class="course-list">
+        <section class="course-head">
             <h2>Web Certificate Course</h2>
+            <ul class="category">
+                <li id="all"><strong>ALL</strong></li>
+                <li id="cse"><strong>CSE</strong></li>
+                <li id="wdd"><strong>WDD</strong></li>
+            </ul>
+        </section>
+        <section class="course-list">
+            <h2>Course List</h2>
             <ul class="course-items">
-            <!-- Filter buttons -->
-            <li id="all"><strong>ALL</strong></li>
-            <li id="cse"><strong>CSE</strong></li>
-            <li id="wdd"><strong>WDD</strong></li>
-
-            <!-- Actual courses with data-credits -->
-            <li class="WDD" data-credits="1">WDD130</li>
-            <li class="CSE" data-credits="1">CSE210</li>
-            <li class="WDD" data-credits="1">WDD131</li>
-            <li class="CSE" data-credits="1">CSE110</li>
-            <li class="WDD" data-credits="1S">WDD231</li>
-            <li class="CSE" data-credits="1">CSE111</li>
+                <li class="WDD" data-credits="1">WDD130</li>
+                <li class="CSE" data-credits="1">CSE210</li>
+                <li class="WDD" data-credits="1">WDD131</li>
+                <li class="CSE" data-credits="1">CSE110</li>
+                <li class="WDD" data-credits="1S">WDD231</li>
+                <li class="CSE" data-credits="1">CSE111</li>
             </ul>
         </section>
     </div>
@@ -92,7 +94,7 @@
              <a href="https://github.com/bahintingchristopher/wdd231"  target="_blank"><img src="images/github.svg" alt="github"   width="16"  height="16"></a>
             <a href="www.linkedin.com/in/cbahinting"  target="_blank"><img src="images/linkedin.svg" alt="linkedin"   width="16"  height="16"></a>
             <a href="https://www.facebook.com/profile.php?id=61579616556378"  target="_blank"><img src="images/facebook.svg" alt="facebook"   width="16"  height="16"></a>
-            <a href=""  target="_blank"><img src="images/twitter-x.svg" alt="twitter-x" width="16"  height="16"></a>
+            <a href="https://x.com/"  target="_blank"><img src="images/twitter-x.svg" alt="twitter-x" width="16"  height="16"></a>
         </div>
 
         <p>
