--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav id="nav-bar" class="navigation">
         <ul>
             <li class="nav-menu"><a href="index.html">HOME</a><span class="arrow"></span></li>
-            <li class="nav-menu"><a href="chamber_projectc.html">Chamber Project</a></li>
+            <li class="nav-menu"><a href=" ">Chamber Project</a></li>
             <li class="nav-menu"><a href="#">Final Project</a></li>
             
         </ul>
