--- a/chamber/chamber_projectc.html
+++ b/chamber/chamber_projectc.html
@@ -12,8 +12,8 @@
 
 
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="styles/chamber_base.css">
+    <link rel="stylesheet" href="styles/chamber_large.css">
  
     
 </head>
@@ -27,9 +27,10 @@
 
     <nav id="nav-bar" class="navigation">
         <ul>
-            <li class="nav-menu"><a href="index.html">HOME</a><span class="arrow"></span></li>
-            <li class="nav-menu"><a href="chamber_projectc.html">Chamber Project</a></li>
-            <li class="nav-menu"><a href="#">Final Project</a></li>
+            <li class="nav-menu"><a href=" ">HOME</a><span class="arrow"></span></li>
+            <li class="nav-menu"><a href="discover.html">DISCOVER</a></li>
+            <li class="nav-menu"><a href="#">DIRECTORY</a></li>
+             <li class="nav-menu"><a href="#">JOIN</a></li>
             
         </ul>
     </nav>
