--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,8 +9,8 @@
 
     <meta property="og:title" content="Kananga Chamber of Commerce">
     <meta property="og:description" content="Your gateway to business excellence and community growth in Kananga, Leyte">
-    <meta property="og:image" content= "">
-    <meta property="og:url" content="">
+    <meta property="og:image" content= "https://raw.githubusercontent.com/bahintingchristopher/wdd231/main/chamber/images/chamber-logo.png">
+    <meta property="og:url" content="https://bahintingchristopher.github.io/wdd231/chamber/directory.html">
     <meta property="og:type" content="website">
 
      <link rel="icon" href="images/chamber-favicon.ico">
