--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -54,18 +54,30 @@
 
 
     <footer>
-        <div class="social">
+        <div class="footer">
+        <section class="address">
+            <h2>Kananga Chamber of Commerce</h2>
+            <p>128 Riverside,<br>
+            Poblacion, Kananga<br>
+            Leyte, Philippines<br>
+            Contact No.: 0912.875.1487</p>
+        </section>
+
+        <section class="social">
              <a href="https://github.com/bahintingchristopher/wdd231"  target="_blank"><img src="images/github.svg" alt="github"   width="16"  height="16"></a>
             <a href="www.linkedin.com/in/cbahinting"  target="_blank"><img src="images/linkedin.svg" alt="linkedin"   width="16"  height="16"></a>
             <a href="https://www.facebook.com/profile.php?id=61579616556378"  target="_blank"><img src="images/facebook.svg" alt="facebook"   width="16"  height="16"></a>
             <a href="https://x.com/"  target="_blank"><img src="images/twitter-x.svg" alt="twitter-x" width="16"  height="16"></a>
-        </div>
+        </section>
 
-        <p>
-        &copy; <span id="currentYear"></span> | Christopher T. Bahinting | Philippines
+        <section class="author">
+        <h2>WDD231 Class Project</h2>
+        <p> Christopher T. Bahinting <br>
+        &copy; <span id="currentYear"></span>  | Philippines
         </p>
         <p id="lastModified"></p>
-        
+        </section>
+        </div>
         
 
     </footer>
