--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -56,7 +56,7 @@
     <footer>
         <div class="footer">
         <section class="address">
-            <h2>Kananga Chamber of Commerce</h2>
+            <h2>HEAD OFFICE</h2>
             <p>128 Riverside,<br>
             Poblacion, Kananga<br>
             Leyte, Philippines<br>
