modify meta description

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="author" content="Christopher T. Bahinting"> 
-    <meta name="description" content="WDD 231 - Chamber Directory Page by  Christopher T. Bahinting, in this course we are going to study  Web Front End Development with Favicon, API, website design principles and JSON.">
+    <meta name="description" content="WDD 231 - Chamber Directory Page by  Christopher T. Bahinting.">
     <title> Chamber Directory Page</title>
 
     <meta property="og:title" content="Kananga Chamber of Commerce">
@@ -23,8 +23,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/chamber_base.css">
     <link rel="stylesheet" href="styles/chamber_large.css">
- 
-    
+
 </head>
 <body>
     <header>
