--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 
     <meta property="og:title" content="Kananga Chamber of Commerce">
     <meta property="og:description" content="Your gateway to business excellence and community growth in Kananga, Leyte">
-    <meta property="og:image" content= "https://raw.githubusercontent.com/bahintingchristopher/wdd231/main/chamber/images/chamber-logo.png">
+    <meta property="og:image" content= "images/bahins_logo.jpg">
     <meta property="og:url" content="https://bahintingchristopher.github.io/wdd231/chamber/directory.html">
     <meta property="og:type" content="website">
 
