omitted the period

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,7 +49,7 @@
             <img src="images/chamber_homepage_hero.jpg" alt="chamber_homepage_hero">
             <div class="hero-content">
                 <h2>BE PART OF OUR STRENGTH</h2>
-                <p>Connect, grow, and thrive with a network dedicated to supporting your business. If we are TOGETHER, we will become STRONGER!.</p>
+                <p>Connect, grow, and thrive with a network dedicated to supporting your business. If we are TOGETHER, we will become STRONGER!</p>
                 <button>Join Us Now!</button>
             </div>
         </section>
