practicing in animation

--- a/capturing_data_form/index.html
+++ b/capturing_data_form/index.html
@@ -46,7 +46,27 @@
         <input type="submit" value="Schedule An Appointment">
     </form>
 
-    
+    <div id="loader"></div>
+
+    <div id="settingsIcon"></div>
+
+<div class="party">
+  <div class="balloon" style="--i:0;"></div>
+  <div class="balloon" style="--i:1;"></div>
+  <div class="balloon" style="--i:2;"></div>
+  <div class="balloon" style="--i:3;"></div>
+  <div class="balloon" style="--i:4;"></div>
+  <div class="balloon" style="--i:5;"></div>
+  <div class="balloon" style="--i:6;"></div>
+  <div class="balloon" style="--i:7;"></div>
+</div>
+
+
+
+
+
+
+
   </main>
 
 </body>
