--- a/capturing_data_form/thanks.html
+++ b/capturing_data_form/thanks.html
@@ -20,6 +20,20 @@
 
     <div id="results"></div>
 
+    
+
+<div class="falling-balloons">
+  <div class="balloon" style="--i:0;"></div>
+  <div class="balloon" style="--i:1;"></div>
+  <div class="balloon" style="--i:2;"></div>
+  <div class="balloon" style="--i:3;"></div>
+  <div class="balloon" style="--i:4;"></div>
+  <div class="balloon" style="--i:5;"></div>
+  <div class="balloon" style="--i:6;"></div>
+  <div class="balloon" style="--i:7;"></div>
+</div>
+
+
   </main>
 
 
