--- a/capturing_data_form/thanks.html
+++ b/capturing_data_form/thanks.html
@@ -23,6 +23,10 @@
     
 
 <div class="falling-balloons">
+  <div style="display: flex; justify-content: center; gap: 4rem; margin-top: 2rem;">
+  <div class="loader-t"></div>
+  <div class="loader-t-hover"></div>
+</div>
   <div class="balloon" style="--i:0;"></div>
   <div class="balloon" style="--i:1;"></div>
   <div class="balloon" style="--i:2;"></div>
