animation and transition practice

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,7 +38,7 @@
             <li class="nav-menu"><a href="index.html">HOME</a><span class="arrow"></span></li>
             <li class="nav-menu"><a href="#">DISCOVER</a></li>
             <li class="nav-menu"><a href="directory.html">DIRECTORY</a></li>
-             <li class="nav-menu"><a href="#">JOIN</a></li>
+             <li class="nav-menu"><a href="join.html">JOIN</a></li>
             
         </ul>
     </nav>
@@ -50,7 +50,7 @@
             <div class="hero-content">
                 <h2>BE PART OF OUR STRENGTH</h2>
                 <p>Connect, grow, and thrive with a network dedicated to supporting your business. If we are TOGETHER, we will become STRONGER!</p>
-                <button>Join Us Now!</button>
+                <button onclick="window.location.href='join.html'">Join Us Now!</button>
             </div>
         </section>
 <section class="events">
