checkpoint for animation

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -83,7 +83,7 @@
       Membership Level:
       <select name="membership" required>
         <option value="">Select membership</option>
-        <option value="np">NP Membership (No Fee)</option>
+        <option value="free">NP Membership (No Fee)</option>
         <option value="bronze">Bronze Membership</option>
         <option value="silver">Silver Membership</option>
         <option value="gold">Gold Membership</option>
@@ -114,14 +114,14 @@
     </section>
 
     <section class="card">
-        <div class="flower-rain">
-    <div class="flower">🌸</div>
-    <div class="flower">🌺</div>
-    <div class="flower">🌸</div>
-    <div class="flower">🌺</div>
-    <div class="flower">🌸</div>
-    <div class="flower">🌺</div>
-  </div>
+    <div class="flower-rain">
+      <div class="flower">🌸</div>
+      <div class="flower">🌺</div>
+      <div class="flower">🌸</div>
+      <div class="flower">🌺</div>
+      <div class="flower">🌸</div>
+      <div class="flower">🌺</div>
+   </div>
 
       <h3>Bronze Membership</h3>
       <p>Mid-level paid membership</p>
@@ -129,30 +129,29 @@
     </section>
 
     <section class="card">
-        <div class="flower-rain">
-    <div class="flower">🌸</div>
-    <div class="flower">🌺</div>
-    <div class="flower">🌸</div>
-    <div class="flower">🌺</div>
-    <div class="flower">🌸</div>
-    <div class="flower">🌺</div>
-  </div>
+    <div class="flower-rain">
+      <div class="flower">🌸</div>
+      <div class="flower">🌺</div>
+      <div class="flower">🌸</div>
+      <div class="flower">🌺</div>
+      <div class="flower">🌸</div>
+      <div class="flower">🌺</div>
+    </div>
 
       <h3>Silver Membership</h3>
-      <p>Mid-level paid membership</p>
+      <p>Higher-level paid membership</p>
       <a data-modal="silver-modal">Learn More</a>
     </section>
 
     <section class="card">
-        <div class="flower-rain">
-    <div class="flower">🌸</div>
-    <div class="flower">🌺</div>
-    <div class="flower">🌸</div>
-    <div class="flower">🌺</div>
-    <div class="flower">🌸</div>
-    <div class="flower">🌺</div>
-  </div>
-
+    <div class="flower-rain">
+      <div class="flower">🌸</div>
+      <div class="flower">🌺</div>
+      <div class="flower">🌸</div>
+      <div class="flower">🌺</div>
+      <div class="flower">🌸</div>
+      <div class="flower">🌺</div>
+    </div>
       <h3>Gold Membership</h3>
       <p>Premium membership with maximum benefits</p>
       <a data-modal="gold-modal">Learn More</a>
