checkpoint for modal

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -110,7 +110,7 @@
     <section class="card">
       <h3>Free Membership</h3>
       <p>No Fee, for Non-profit organizations</p>
-      <a data-modal="free-modal">Learn More</a>
+      <a id="openFree">Learn More</a>
     </section>
 
     <section class="card">
@@ -125,7 +125,7 @@
 
       <h3>Bronze Membership</h3>
       <p>Mid-level paid membership</p>
-      <a data-modal="bronze-modal">Learn More</a>
+      <a id="openBronze">Learn More</a>
     </section>
 
     <section class="card">
@@ -140,7 +140,7 @@
 
       <h3>Silver Membership</h3>
       <p>Higher-level paid membership</p>
-      <a data-modal="silver-modal">Learn More</a>
+      <a id="openSilver">Learn More</a>
     </section>
 
     <section class="card">
@@ -154,60 +154,13 @@
     </div>
       <h3>Gold Membership</h3>
       <p>Premium membership with maximum benefits</p>
-      <a data-modal="gold-modal">Learn More</a>
-    </section>
+     <a id="openGold">Learn More</a>
+     </section>
   </div>
 </div>
 
-
-
-<!-- Modals -->
-<!-- <div id="np-modal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <h2>NP Membership Benefits</h2>
-    <ul>
-      <li>Access to networking events</li>
-      <li>Participation in volunteer initiatives</li>
-    </ul>
-  </div>
-</div>
-
-<div id="bronze-modal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <h2>Bronze Membership Benefits</h2>
-    <ul>
-      <li>All NP benefits</li>
-      <li>Discounted event tickets</li>
-      <li>Listing on the member directory</li>
-    </ul>
-  </div>
-</div>
-
-<div id="silver-modal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <h2>Silver Membership Benefits</h2>
-    <ul>
-      <li>All Bronze benefits</li>
-      <li>Featured advertising on home page</li>
-      <li>Access to training programs</li>
-    </ul>
-  </div>
-</div>
-
-<div id="gold-modal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <h2>Gold Membership Benefits</h2>
-    <ul>
-      <li>All Silver benefits</li>
-      <li>Spotlight positions in newsletters</li>
-      <li>Exclusive VIP events</li>
-    </ul>
-  </div>
-</div> -->
+<!-- FOR MODAL -->
+ <dialog id="mydialog"></dialog>
 
               
 
