--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -50,7 +50,8 @@
 
           
 
-        <script src="scripts/thanks.js"></script>
+        <script src="scripts/thanks.js" defer></script>
+        <script src="scripts/directory.js"></script>
        
 
      <footer>
