checkpoint for all except for the font and colors

--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -43,12 +43,42 @@
         </ul>
     </nav>
  
-    <main>
-        <h1>Thank you for your Interest in Kananga Chamber of Commerce</h1>
-        <div id="results"></div>
-        </main>
+<main>
+  <h1>Thank you for your Interest in Kananga Chamber of Commerce</h1>
 
-          
+  <div id="results">
+    <!-- Form submission results will be injected here by JS -->
+  </div>
+
+  <!-- Falling gifts/confetti -->
+  <div class="gift-container">
+    <div class="gift">🎁</div>
+    <div class="gift">🎉</div>
+    <div class="gift">🎊</div>
+    <div class="gift">🌺</div>
+    <div class="gift">🎉</div>
+    <div class="gift">🎊</div>  
+    <div class="gift">🎁</div>
+    <div class="gift">🌸</div>
+    <div class="gift">🎊</div>
+    <div class="gift">🌸</div>
+    <div class="gift">🎉</div>
+    <div class="gift">🌺</div>
+    <div class="gift">🎁</div>
+    <div class="gift">🎉</div>
+    <div class="gift">🎊</div>
+    <div class="gift">🌺</div>
+    <div class="gift">🎉</div>
+    <div class="gift">🎊</div>  
+    <div class="gift">🎁</div>
+    <div class="gift">🌸</div>
+    <div class="gift">🎊</div>
+    <div class="gift">🌸</div>
+    <div class="gift">🎉</div>
+    <div class="gift">🌺</div>
+  </div>
+</main>
+
 
         <script src="scripts/thanks.js" defer></script>
         <script src="scripts/directory.js"></script>
