--- a/chamber/join.html
+++ b/chamber/join.html
@@ -82,7 +82,7 @@
     <label>
       Membership Level:
       <select name="membership" required>
-        <option value="">Select membership</option>
+        <option value="" disabled selected>Choose membership</option>
         <option value="free">Free Membership (No Fee)</option>
         <option value="bronze">Bronze Membership</option>
         <option value="silver">Silver Membership</option>
