--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -44,7 +44,7 @@
     </nav>
  
 <main>
-  <h1>Thank you for your Interest in Kananga Chamber of Commerce</h1>
+  <h1>Thank you for your Interest in Kananga Chamber of Commerce!</h1>
 
   <div id="results">
     <!-- Form submission results will be injected here by JS -->
