--- a/chamber/join.html
+++ b/chamber/join.html
@@ -163,8 +163,8 @@
  <dialog id="mydialog"></dialog>
 
               
-
-      </main>
+</div>
+  </main>
       
       <script src="scripts/directory.js" defer></script>
       <script src="scripts/weather.js" defer></script>
