--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -46,6 +46,8 @@
 <main>
   <h1>Thank you for your Interest in Kananga Chamber of Commerce!</h1>
 
+    <input type="hidden" id="submissionTime" name="submissionTime">
+  
   <div id="results">
     <!-- Form submission results will be injected here by JS -->
   </div>
