--- a/chamber/join.html
+++ b/chamber/join.html
@@ -47,7 +47,7 @@
 
    
 
-  <form method="get" action="thanks.html">
+  <form method="get" action="thankyou.html">
 
     <div class="form-label">
        <h1>INFORMATION:</h1>
