--- a/chamber/join.html
+++ b/chamber/join.html
@@ -73,7 +73,7 @@
 
     <label>
       Business / Organization Name:
-      <input  id="organizationTitle"   type="text"   name="orgTitle"   title="Name in Organization"   autocomplete="organization-title" 
+      <input  id="organizationTitle"   type="text"   name="orgTitle"   title="Name in Organization"   autocomplete="organization" 
                  placeholder="Business Name, Ex: ABC Hardware">
     </label>
 
