--- a/chamber/join.html
+++ b/chamber/join.html
@@ -79,7 +79,7 @@
     </label>
 
     <label>
-      Business / Organization Name:
+      Organization Name:
       <input  id="organizationTitle"   type="text"   name="orgTitle"   title="Name in Organization"   autocomplete="organization" 
                  placeholder="Business Name, Ex: ABC Hardware">
     </label>
@@ -89,7 +89,7 @@
       Membership Level:
       <select name="membership" required>
         <option value="" disabled selected>Choose membership</option>
-        <option value="free">Free Membership (No Fee)</option>
+        <option value="np">NP Membership (No Fee)</option>
         <option value="bronze">Bronze Membership</option>
         <option value="silver">Silver Membership</option>
         <option value="gold">Gold Membership</option>
@@ -127,7 +127,7 @@
       <div class="flower">🌺</div>
    </div>
    
-      <h3>Free Membership</h3>
+      <h3>NP - Free Membership</h3>
       <p>No Fee, for Non-profit organizations</p>
       <a id="openFree">Learn More</a>
     </section>
