--- a/chamber/join.html
+++ b/chamber/join.html
@@ -79,11 +79,10 @@
     </label>
 
     <label>
-      Organization Name:
-      <input  id="organizationTitle"   type="text"   name="orgTitle"   title="Name in Organization"   autocomplete="organization" 
-                 placeholder="Business Name, Ex: ABC Hardware">
+        Organization Name:
+        <input   id="organizationTitle"    type="text"     name="orgTitle"    title="Enter organization or business name"  autocomplete="organization"
+          placeholder="Business Name, Ex: ABC Hardware"      required        pattern="[A-Za-z0-9\s\-\&\.,]{2,}">
     </label>
-
 
     <label>
       Membership Level:
