fixing the falling rain to 80%

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -79,7 +79,7 @@
     </label>
 
     <label>
-        Organization Name:
+        Business / Organization Title:
         <input   id="organizationTitle"    type="text"     name="orgTitle"    title="Enter organization or business name"  autocomplete="organization"
           placeholder="Business Name, Ex: ABC Hardware"      required        pattern="[A-Za-z0-9\s\-\&\.,]{2,}">
     </label>
