--- a/chamber/join.html
+++ b/chamber/join.html
@@ -126,7 +126,7 @@
       <div class="flower">🌺</div>
    </div>
    
-      <h3>NP - Free Membership</h3>
+      <h3>NP Membership</h3>
       <p>No Fee, for Non-profit organizations</p>
       <a id="openFree">Learn More</a>
     </section>
