--- a/chamber/join.html
+++ b/chamber/join.html
@@ -106,7 +106,7 @@
     <input type="hidden" name="timestamp" id="timestamp">
      </div>
 
-      <button id="fire"  type="submit">Avail Membership</button>
+      <button id="fire"  type="submit">Confirm Submission</button>
   </form>
 
 
