--- a/site_plan.html
+++ b/site_plan.html
@@ -23,7 +23,14 @@
     </header>
 
     <main>
-        <p><strong>Site Name:</strong> Bahins Car Sales</p>
+       <p><strong>Site Name:</strong> Bahins Car Sales</p>
+       <p>
+            The reason I chose this project is because I plan to offer website and software services 
+            to local car dealers in our area, and this project gives me the opportunity to practice 
+            and improve my skills.
+       </p>
+
+
         <p><strong>Site Purpose:</strong> The website will function as an online car store where users can browse and explore different car brands and models. Customers can view details such as year, price, and specifications, making it easy to find the right vehicle. The site will have a clean, user-friendly layout and will be responsive for both desktop and mobile devices, providing a seamless experience for all users.</p>
        
         <section class="scenario">
