--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -23,6 +23,7 @@
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/chamber_base.css">
+    <link rel="stylesheet" href="styles/chamber_medium.css">
     <link rel="stylesheet" href="styles/chamber_large.css">
 
 </head>
@@ -36,7 +37,7 @@
     <nav id="nav-bar" class="navigation">
         <ul>
             <li class="nav-menu"><a href="index.html">HOME</a><span class="arrow"></span></li>
-            <li class="nav-menu"><a href="#">DISCOVER</a></li>
+            <li class="nav-menu"><a href="discover.html">DISCOVER</a></li>
             <li class="nav-menu"><a href="directory.html">DIRECTORY</a></li>
              <li class="nav-menu"><a href="join.html">JOIN</a></li>
             
