--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -48,9 +48,9 @@
          <h1>Discovery</h1>
          <div id="showHere"></div>
 
-         <dialog id="mydialog">
+         <!-- <dialog id="mydialog">
             <button>X</button>
-            <p></p>
+            <p></p> -->
          
         </dialog>
 
