--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -89,5 +89,14 @@
         
 
     </footer>
+
+   <div id="welcomeBanner">
+    <div id="visit-message"></div>
+    <span id="closeBanner">&times;</span>
+</div>
+
+
+
+
 </body>
 </html>
