--- a/chamber/join.html
+++ b/chamber/join.html
@@ -129,6 +129,7 @@
    
       <h3>NP Membership</h3>
       <p>No Fee, for Non-profit organizations</p>
+      <p><strong>FREE</strong></p>
       <a id="openFree">Learn More</a>
     </section>
 
@@ -144,6 +145,7 @@
 
       <h3>Bronze Membership</h3>
       <p>Mid-level paid membership</p>
+      <p><strong>Php 1, 000.00</strong></p>
       <a id="openBronze">Learn More</a>
     </section>
 
@@ -159,6 +161,7 @@
 
       <h3>Silver Membership</h3>
       <p>Higher-level paid membership</p>
+      <p><strong>Php 1, 500.00</strong></p>
       <a id="openSilver">Learn More</a>
     </section>
 
@@ -173,6 +176,7 @@
     </div>
       <h3>Gold Membership</h3>
       <p>Premium membership with maximum benefits</p>
+      <p><strong>Php 3, 000.00</strong></p>
      <a id="openGold">Learn More</a>
      </section>
   </div>
