--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -47,17 +47,16 @@
     <main>
          <h1>Discovery</h1>
          <div id="showHere"></div>
-
-         <!-- <dialog id="mydialog">
+<!-- 
+         <dialog id="mydialog">
             <button>X</button>
-            <p></p> -->
-         
-        </dialog>
+            <p></p>         
+        </dialog> -->
 
   
     </main>
 
-    <script src="scripts/discover.js" defer type="module"></script>
+    <script src="scripts/discover.js"  type="module"></script>
     <script src="scripts/chamber.js" defer></script>
 
 
