--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -45,7 +45,7 @@
     </nav>
 
     <main>
-         <h1>Discovery</h1>
+         <h1>Discover</h1>
          <div id="showHere"></div>
 <!-- 
          <dialog id="mydialog">
