--- a/chamber/join.html
+++ b/chamber/join.html
@@ -39,7 +39,7 @@
             <li class="nav-menu"><a href="index.html">HOME</a><span class="arrow"></span></li>
             <li class="nav-menu"><a href="discover.html">DISCOVER</a></li>
             <li class="nav-menu"><a href="directory.html">DIRECTORY</a></li>
-             <li class="nav-menu"><a href="#">JOIN</a></li>
+             <li class="active-page"><a href="#">JOIN</a></li>
         </ul>
     </nav>
 
