--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,7 +38,7 @@
         <ul>
             <li class="nav-menu"><a href="index.html">HOME</a><span class="arrow"></span></li>
             <li class="nav-menu"><a href="discover.html">DISCOVER</a></li>
-            <li class="nav-menu"><a href="directory.html">DIRECTORY</a></li>
+            <li class="active-page"><a href="directory.html">DIRECTORY</a></li>
              <li class="nav-menu"><a href="join.html">JOIN</a></li>
             
         </ul>
