--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,7 +36,7 @@
 
     <nav id="nav-bar" class="navigation">
         <ul>
-            <li class="nav-menu"><a href="index.html">HOME</a><span class="arrow"></span></li>
+            <li class="active-page"><a href="index.html">HOME</a><span class="arrow"></span></li>
             <li class="nav-menu"><a href="discover.html">DISCOVER</a></li>
             <li class="nav-menu"><a href="directory.html">DIRECTORY</a></li>
              <li class="nav-menu"><a href="join.html">JOIN</a></li>
