--- a/site_plan.html
+++ b/site_plan.html
@@ -67,7 +67,7 @@
                     <img src="images/mobile_view.png" alt="mobile_view">
                     <img src="images/large_view.png" alt="large_view">
                  </div>
-            <a href="https://app.moqups.com/5vvmp2LV99DcSYD5gqUQU7ZFXY9ejEoW/view/page/ad64222d5">Wireframe Link on Moqups</a>
+            <a href="https://app.moqups.com/5vvmp2LV99DcSYD5gqUQU7ZFXY9ejEoW/view/page/a82e7b393" target="_blank">Wireframe Link on Moqups</a>
         </section>
     </main>
 
