--- a/finalproject/inventory.html
+++ b/finalproject/inventory.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="author" content="Christopher T. Bahinting"> 
     <meta name="description" content="WDD 231 - Bahins Car Sales as Final Project by  Christopher T. Bahinting.">
-    <title> Home page of Final Project</title>
+    <title> Inventory page of Final Project</title>
 
     <meta property="og:title" content="Bahins Car Sales">
     <meta property="og:description" content="Your trusted partner for quality vehicles and exceptional service.">
@@ -53,47 +53,21 @@
 
 
 <main>
-   <div class="hero-box">
-    <img src="images/hero_image.jpg" alt="hero image" class="hero-image">
-       
-        <div class="cta">
-            <h1>Find Your Dream Car Today!</h1>
-            <p>Explore our premium selection and experience the ride of your life.</p>
-            <div class="hero-buttons">
-                <a href="test-drive.html" class="btn primary-btn">Schedule a Test Drive</a>
-        </div>
-        </div>
-    </div>
-</div>
 
 <div class="featured-cars">
-    <h2>Featured Cars</h2>
+    <h2>Our Top Choicest Cars</h2>
     <div id="cars-container" class="grid"></div>
 </div>
 
-<section class="about-us">
-  <div class="about-content">
-    <h2>About Us</h2>
-    <p>
-      Welcome to <strong>Bahins Car Sales</strong>! We are passionate about providing high-quality vehicles that meet your needs and exceed your expectations. With years of experience in the automotive industry, our team is dedicated to helping you find the perfect car at the right price.
-    </p>
-    <p>
-      Our mission is to make car buying simple, transparent, and enjoyable. Whether you’re searching for your first car, upgrading to something new, or looking for a reliable used vehicle, we are here to guide you every step of the way.
-    </p>
-    <p>
-      At <strong>Bahins Car Sales</strong>, we value integrity, customer satisfaction, and excellence. We believe in building lasting relationships with our customers based on trust and reliability.
-    </p>
-    <p>
-      Thank you for choosing us as your automotive partner. We look forward to helping you hit the road in your dream car!
-    </p>
-  </div>
+<div class="inventory-cta">
+    <h1>Find Your Dream Car Today!</h1>
+    <p>Explore our premium selection and experience the ride of your life.</p>
+    <div class="test-drive-button">
+        <a href="test-drive.html" class="btn primary-btn">Schedule a Test Drive</a>
+</div>
 
-  <div class="inventory-cta">
-    <p>Ready to find your next car? Browse our extensive inventory of quality vehicles today!</p>
-    <a href="inventory.html" class="btn secondary-btn">FIND YOU CAR TODAY</a>
+<dialog id="mydialog"></dialog>
 
-  </div>
-</section>
 
 
 </main>
