--- a/finalproject/inventory.html
+++ b/finalproject/inventory.html
@@ -41,8 +41,8 @@
 
         <nav id="nav-bar" class="navigation">
             <ul>
-                <li class="active-page"><a href="index.html">HOME</a></li>
-                <li><a href="inventory.html">INVENTORY</a></li>
+                <li ><a href="index.html">HOME</a></li>
+                <li class="active-page" ><a href="inventory.html">INVENTORY</a></li>
                 <li><a href="contact.html">CONTACT US</a></li>
             </ul>
         </nav>
